--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test/*/*.test.js"
   },
   "keywords": [
     "node",
@@ -43,7 +43,10 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "chai": "^4.3.10",
     "eslint": "^8.44.0",
-    "eslint-plugin-mongodb": "^1.0.0"
+    "eslint-plugin-mongodb": "^1.0.0",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
