--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
-    "test": "mocha ./test/*/*.test.js"
+    "test": "mocha ./test/*/*.test.js --timeout 5000 --exit",
+    "test-with-server": "npm run start & npm run test && npm run stop-server",
+    "stop-server": "pkill -f 'node ./src/app.js'"
   },
   "keywords": [
     "node",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.10",
+    "concurrently": "^8.2.1",
     "eslint": "^8.44.0",
     "eslint-plugin-mongodb": "^1.0.0",
     "mocha": "^10.2.0",
