--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "bcrypt": "^5.1.0",
+    "chai-datetime": "^1.8.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -35,6 +36,7 @@
     "mongoose": "^7.3.3",
     "mongoose-paginate-v2": "^1.7.1",
     "mongoose-sequence": "^5.3.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
